--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-text
+
+    //xss관련 dependencies
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
